--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-advanced",
-  "description": "GatsbyJS starter that includes examples for advanced use cases.",
-  "version": "1.1.0",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "name": "nitrox-tv",
+  "description": "Nitrox.TV website.",
+  "version": "0.0.0-semantically-released",
+  "author": "Andreas Adam <andreas.sahle@gmail.com>",
   "dependencies": {
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
@@ -57,7 +57,7 @@
     "write-good": "^1.0.1"
   },
   "keywords": [
-    "gatsby"
+    "gatsby", "react", "video"
   ],
   "license": "MIT",
   "main": "n/a",
