feat: configure netlify cms for loc and city

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
-  name: git-gateway # Refer to https://www.netlifycms.org/docs/authentication-backends/ for auth backend list and instructions
+  name: github # Refer to https://www.netlifycms.org/docs/authentication-backends/ for auth backend list and instructions
   branch: master # Branch to update
+  repo: pixelmord/nitrox.tv # Repo for pushing new commits. Make sure to replace with your repo!
 
 media_folder: static/assets
 public_folder: assets
@@ -10,10 +11,12 @@ collections:
     label: 'Post'
     folder: 'content'
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}.md'
+    slug: '{{slug}}-{{year}}-{{month}}-{{day}}.md'
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Date', name: 'date', widget: 'datetime' }
+      - { label: 'City', name: 'city', widget: 'string' }
+      - { label: 'Location', name: 'location', widget: 'string' }
       - { label: 'Cover Image', name: 'cover', widget: 'image' }
       - { label: 'Slug', name: 'slug', widget: 'string' }
       - { label: 'Tags', name: 'tags', widget: 'list' }
