--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "gatsby build"
+  command = "yarn build:gh"
 [build.environment]
   NODE_VERSION = "12.13.0"
   YARN_VERSION = "1.19.1"
