--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-helmet": "^5.2.1",
     "react-share": "^4.1.0",
     "react-twitter-widgets": "^1.7.1",
-    "url-join": "^4.0.0"
+    "url-join": "^4.0.0",
+    "video-react": "^0.14.1"
   },
   "devDependencies": {
     "cli-glob": "^0.1.0",
@@ -49,6 +50,7 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "prettier": "^2.0.2",
     "remark-cli": "^8.0.0",
