--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "tinacms dev -c \"astro dev\"",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.4.15",
     "@astrojs/check": "^0.5.6",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.4.15",
+    "tailwindcss": "^3.4.1",
+    "tinacms": "^1.6.0",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "@tinacms/cli": "^1.5.42",
+    "@types/node": "^20.11.25"
   }
 }
