--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "tinacms dev -c \"astro dev\"",
-    "start": "astro dev",
+    "start": "pnpm dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
