--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.3",
     "tinacms": "^1.6.0",
     "typescript": "^5.4.2"
   },
