--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "astro",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "tinacms dev -c \"astro dev\"",
-    "start": "pnpm dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/tailwind": "^6.0.2",
-    "@tailwindcss/vite": "^4.1.3",
-    "astro": "^5.6.1",
-    "tailwindcss": "^4.1.3",
-    "tinacms": "^1.6.0",
-    "typescript": "^5.4.2"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@tinacms/cli": "^1.5.42",
-    "@types/node": "^20.11.25"
-  }
+	"name": "astro",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "tinacms dev -c \"astro dev\"",
+		"start": "pnpm dev",
+		"build": "tinacms build && astro check && astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/check": "^0.9.4",
+		"@astrojs/tailwind": "^6.0.2",
+		"@tailwindcss/vite": "^4.1.3",
+		"astro": "^5.6.1",
+		"tailwindcss": "^4.1.3",
+		"tinacms": "^1.6.0",
+		"typescript": "^5.4.2"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.10",
+		"@tinacms/cli": "^1.5.42",
+		"@types/node": "^20.11.25"
+	}
 }
